<resources>
    <string name="app_name">Capstone Project</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">HighScore Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_button">Break It</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_home">LoginHome</string>
    <string name="signedin_fmt">abcd</string>
    <string name="init_score">0</string>
    <string name="start">START</string>
    <string name="win">WIN</string>
    <string name="reset">RESET</string>

    <string name="leaderboard">Leaderboard</string>
    <string name="highscore">Highscore</string>
    <string name="worldhighscore">World Highscore</string>
    <string name="score">Score</string>New High
    <string name="newhigh">Score</string>
    <string name="play">Play</string>
    <string name="gobackpress">Press Again To Go Back</string>
    <string name="wintext">You Win :)</string>
    <string name="loosetext">You Loose :(</string>


    <string name="cd_widgetbreakit">Play Button</string>
    <string name="cd_googlesignin">Google Signin Button</string>
    <string name="cd_yourpic">Your Photo</string>
    <string name="cd_play">Play Button</string>
    <string name="cd_startimg">Start Image</string>
    <string name="cd_winimg">Win Image</string>
    <string name="cd_restartgame">Restart Game</string>
    <string name="cd_pb11">Picture 1 1</string>
    <string name="cd_pb12">Picture 1 2</string>
    <string name="cd_pb13">Picture 1 3</string>
    <string name="cd_pb14">Picture 1 4</string>
    <string name="cd_pb21">Picture 2 1</string>
    <string name="cd_pb22">Picture 2 2</string>
    <string name="cd_pb23">Picture 2 3</string>
    <string name="cd_pb24">Picture 2 4</string>
    <string name="cd_pb31">Picture 3 1</string>
    <string name="cd_pb32">Picture 3 2</string>
    <string name="cd_pb33">Picture 3 3</string>
    <string name="cd_pb34">Picture 3 4</string>
    <string name="cd_pb41">Picture 4 1</string>
    <string name="cd_pb42">Picture 4 2</string>
    <string name="cd_pb43">Picture 4 3</string>
    <string name="cd_pb44">Picture 4 4</string>
</resources>
