<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="infinnov.udacity.capstoneproject.LoginHomeFragment"
    tools:showIn="@layout/activity_login_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_googlesignin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPlayerImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/cd_yourpic"
                android:src="@drawable/a2bb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/tvHighScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highscore"
                android:textAlignment="center"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/tvWorldHighScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worldhighscore"
                android:textAlignment="center"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_play"
                android:text="@string/play" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
